# actionfile

./: .actions  Cargo.toml  README.md  install.sh  package.json  uninstall.sh
.github/workflows/: build.yaml  release.yml
__test__/: deno.json  package.json
scripts/: install.sh
src/: helpers.rs  main.rs  package_detector.rs  parser.rs  parser_json.rs  run.rs
src/commands/: add.rs  help.rs  install.rs  list_commands.rs  mod.rs  outdated.rs  remove.rs  upgrade.rs  version.rs
