[package]
name = "actionfile"
version = "0.1.5"
edition = "2021"

[dependencies]
colored = "3.0.0"
prettytable = "0.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
